@@ -1,3 +1,12 @@
+2011-03-17  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Oliver Hunt.
+
+        Fixed a leak seen on the buildbot.
+
+        * WebCoreSupport/WebInspectorClient.mm:
+        (WebInspectorClient::openInspectorFrontend): Smart pointers are smart.
+
 2011-03-16  Jeff Johnson  <github@lapcatsoftware.com>
 
         Reviewed by Alexey Proskuryakov.
